--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     let myVue = new Vue({
       el: '#app',
       components: {
-        'myComponent': httpVueLoader('myComponent.vue')
+        'myComponent': httpVueLoader('https://who-covid-19.github.io/myComponent.vue')
       },
       data: {
         newTask: 'Mayank Chaudhari',
