--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Awesome Vue App</title>
-    <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+    <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/vue-material.min.js"></script>
     <!-- development version, includes helpful console warnings -->
     <!-- production version, optimized for size and speed -->
